--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
 <plugin>
     <groupId>org.apache.maven.plugins</groupId>
     <artifactId>maven-compiler-plugin</artifactId>
-    <version>3.10.1</version>
+    <version>4.0.0-beta-2</version>
 </plugin>
 
 <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-surefire-plugin -->
